--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     
     <!-- endbower -->
     <!-- endbuild -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.1.0.slim.min.js"   integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8="   crossorigin="anonymous"></script>
      <script   src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"   integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="   crossorigin="anonymous"></script>
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <!-- build:js scripts/main.js -->
